# tike

./: .bashrc  .coveragerc  .gitignore  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README  README.rst  azure-pipelines.yml  build.py  example.py  host_list  meta.yaml  ptychotike.py  pyproject.toml  rand_ptychotike.py  randomization.py  requirements-container.txt  requirements.txt  setup.cfg  setup.py  test.txt
.github/workflows/: apptainer.yml  codeql.yml  main.yml  source-publish.yml  unit-tests.yml
apptainer/: tike.def
config/: Makefile.darwin  Makefile.linux  Makefile.windows  Mk.base
docs/: CONTRIBUTING.rst  INSTALL.rst  Makefile  api-class-diagram.md  demo_admm.ipynb  demo_ptycho.ipynb  demo_scan.ipynb  demo_tomo.ipynb  make.bat  pull_request_template.md  pull_requst_template.md  requirements.txt
docs/source/: api-class-diagram.mmd  api.rst  conf.py  examples.rst  index.rst  license.rst
include/: raytrace.h  siddon.h  tomo.h  utils.h
profile/: profile_admm.py  profile_lamino.py  profile_ptycho.py  profile_tomo.py
src/: .clang-format  CMakeLists.txt  raytrace.c  siddon.c  siddon.h  tomo.c  tomo.h  utils.c  utils.h
src/broken/: communicator.py  reg.py  tike.py  usfft.py
src/broken/operators/: tomo.py
src/broken/ptycho/solvers/: admm.py  divided.py
src/broken/tomo/: tomo.py
src/libtike/: __init__.py  siddon.c  siddon.h  utils.c
src/tike/: __init__.py  admm.py  cluster.py  communicator.py  constants.py  coverage.py  externs.py  libtike.py  libtikepy.py  linalg.py  mpicomm.py  opt.py  pca.py  pool.py  precision.py  ptycho.py  random.py  reg.py  regularization.py  scan.py  templates.py  tike.py  tomo.py  trajectory.py  utils.py  view.py  zernike.py
src/tike/admm/: __init__.py  admm.py  al.py  alignment.py  lamino.py  pal.py  pl.py  ptycho.py
src/tike/admm/subproblem/: __init__.py  align.py  lamino.py  ptycho.py  reg.py
src/tike/align/: __init__.py  align.py
src/tike/align/solvers/: __init__.py  cgrad.py  cross_correlation.py  direct.py  farneback.py
src/tike/communicators/: __init__.py  comm.py  mpi.py  pool.py  stream.py
src/tike/lamino/: __init__.py  bucket.py  lamino.py  lamino_bucket.py
src/tike/lamino/solvers/: __init__.py  bucket.py  cgrad.py  cgrad_bucket.py  lamcg.py
src/tike/operators/: __init__.py  convolution.py  operator.py  propagation.py  ptycho.py  tomo.py
src/tike/operators/cupy/: __init__.py  alignment.py  bucket.cu  bucket.py  cache.py  convolution.cu  convolution.py  flow.py  fresnelspectprop.py  gradient.py  grid.cu  interp.cu  lamino.py  multislice.py  multislice_fresnelspectprop.py  objective.py  operator.py  pad.py  patch.py  propagation.py  ptycho.py  reg.py  rotate.py  shift.py  usfft.cu  usfft.py  zernike.py
src/tike/operators/numpy/: __init__.py  convolution.py  flow.py  lamino.py  operator.py  propagation.py  ptycho.py  reg.py  shift.py  usfft.py
src/tike/operators/torch/: __init__.py  lamino.py
src/tike/ptycho/: __init__.py  exitwave.py  fresnel.py  io.py  learn.py  numpy.py  object.py  objective.py  position.py  probe.py  probe_MW.py  probe_init.py  ptycho.py  shift.py  solvers.py
src/tike/ptycho/_core/: __init__.py  _shift.py  core.py  numpy.py
src/tike/ptycho/solvers/: __init__.py  _preconditioner.py  adam.py  admm.py  cgrad.py  combined.py  conjugate.py  divided.py  dm.py  epie.py  grad.py  lstsq.py  lstsq_grad.py  options.py  rpie.py
src/tike/tomo/: __init__.py  _core.py  solvers.py  tomo.py
tests/: compare_gradients.py  numpy_cupy_compare.ipynb  print-gpu-info.py  setup.cfg  test_MW.py  test_align.py  test_anisotropy.py  test_comm.py  test_communicator.py  test_complex.py  test_coverage.py  test_lamino.py  test_linalg.py  test_multislice.py  test_opt.py  test_pool.py  test_ptycho.py  test_random.py  test_tomo.py  test_trajectory.py  test_view.py  test_zernike.py  theta_coverage.npy
tests/communicators/: test_comm.py  test_communicator.py  test_mpi.py  test_pool.py  test_streams.py
tests/data/: Bambus-0256.tiff  Bombus_terrestris-0128.tif  Cryptomeria_japonica-0128.tif  Tvol3D_2cubes_2spheres_r256xc384xp512.mat  airport-0384.tiff  airport-0512padded.tiff  algin_setup.pickle.lzma  baboon.npy  bambus-0384.tiff  bambus-0512.tiff  bambus-0512padded.tiff  cameraman-0256padded.tiff  cameraman-0384.tiff  cameraman-0512padded.tiff  cone-0256.tif  cone-0384.tiff  cone-0512padded.tiff  house-0256.tif  house-0384.tiff  house-0512padded.tiff  images.bib  lamino_bucket.pickle.lzma  lamino_cgrad.pickle.lzma  lamino_setup.pickle.lzma  lena-0512.tiff  lena.npy  nalm256.pickle.lzma  peppers-0384.tiff  peppers-0512padded.tiff  ptycho_admm.pickle.lzma  shepp2d-0384.tiff  (+11 more)
tike/: __init__.py  communicator.py  constants.py  coverage.py  externs.py  probe.py  ptycho.py  scan.py  tike.py  tomo.py  tomo_reg.py  tomov6.py  trajectory.py  utils.py  view.py
(+83 files in other folders)
