cmake_minimum_required(VERSION 3.0)
project(tike)
include_directories("include/libtike")
file(GLOB SOURCE_FILES "${PROJECT_SOURCE_DIR}/tike/libtike/*.c")
list(FILTER SOURCE_FILES EXCLUDE REGEX "raytrace*")
foreach(file ${SOURCE_FILES})
  message(STATUS "Added source file: ${file}")
endforeach(file)
add_library(tike SHARED ${SOURCE_FILES})
set_target_properties(tike PROPERTIES PREFIX "lib" C_STANDARD 11)
if(WIN32)
  install(TARGETS tike RUNTIME DESTINATION tike)
else()
  install(TARGETS tike LIBRARY DESTINATION tike)
endif()
