[metadata]
name = tike
url = http://tike.readthedocs.org
download_url = http://github.com/tomography/tike.git
author =
    Doga Gursoy
    Daniel Ching
    Xiaodong Yu
    Viktor Nikitin
author_email = dgursoy@anl.gov
license = BSD 3-Clause License
classifiers =
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'Intended Audience :: Science/Research'
    'License :: OSI Approved :: BSD License'
    'Natural Language :: English'
    'Operating System :: OS Independent'
    'Programming Language :: Python :: 3 :: Only'
    'Topic :: Scientific/Engineering'
long_description = file: README.rst, LICENSE

[options]
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    cupy >=8.0,!=10.3.0
    importlib_resources;python_version<'3.9'
    importlib_metadata;python_version<'3.8'
    matplotlib ==3.*
    mpi4py ==3.*
    numpy ~=1.17
    opencv-python >=3.4,<5.0
    scipy ==1.*

[options.packages.find]
where=src

[yapf]
based_on_style = google
split_before_logical_operator = true
SPLIT_COMPLEX_COMPREHENSION = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_DOT = true

[pycodestyle]
max-line-length=80
count=true

[pydocstyle]
ignore = D100,D213,D416,D203,D107,D105
